--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "tsk"
+name = "tsk-monster"
 version = "0.0.0"
 description = ""
 authors = ["Gilad Kutiel <giladk@mobileye.com>"]
