--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "tsk-monster"
-version = "0.0.19"
+version = "0.0.20"
 description = ""
 authors = ["Gilad Kutiel <giladk@mobileye.com>"]
 readme = "README.md"
@@ -23,9 +23,9 @@ isort = "^5.13.2"
 pytest = "^8.1.1"
 pyright = "^1.1.357"
 pre-commit = "^3.7.0"
-mkdocs = "^1.5.3"
-mkdocstrings = {extras = ["python"], version = "^0.24.3"}
 mkdocs-material = "^9.5.17"
+mkdocstrings = {extras = ["python"], version = "^0.24.3"}
+mkdocs-include-markdown-plugin = "^6.0.5"
 
 [tool.poetry.dependencies]
 python = "3.10.*"
