--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ mkdocstrings = {extras = ["python"], version = "^0.24.3"}
 mkdocs-include-markdown-plugin = "^6.0.5"
 
 [tool.poetry.dependencies]
-python = "3.10.*"
+python = "^3.10"
 typer = "^0.12.3"
 
 
