--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pre-commit = "^3.7.0"
 mkdocs-material = "^9.5.17"
 mkdocstrings = {extras = ["python"], version = "^0.24.3"}
 mkdocs-include-markdown-plugin = "^6.0.5"
+pillow = "^10.3.0"
 
 [tool.poetry.dependencies]
 python = "^3.10"
